#189 Fix species report table overflow

--- a/src/User/StatisticsYear/styles.scss
+++ b/src/User/StatisticsYear/styles.scss
@@ -27,11 +27,7 @@
   }
 
   table {
-    margin: 0 auto;
-    margin-top: 20px;
-    margin-bottom: 30px;
     width: 100%;
-    max-width: 95%;
     font-weight: 300;
     font-family: 'Museo';
 
